# wedos-set-a-ip

./: Cargo.toml  README.md
src/: ipv4.rs  main.rs  wedos.rs
