[package]
name = "wedos_set_a_ip"
version = "0.1.0"
edition = "2021"
authors = ["Petr Miko"]

[dependencies]
serde = { version = "1.0.204", features = ["serde_derive"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
